# jcp-plus-pulp

./: .tool-versions  Makefile  README.md  aw.spec  jcp-plus-pulp.7z  jcp-plus-pulp.spec  pyproject.toml
aw-client/aw_client/: cli.py  queries.py
aw-client/examples/: load_dataframe.py  redact_sensitive.py  suggest_categories.py  time_spent_today.py  working_hours.py
aw-core/aw_transform/: simplify.py
aw-notify/: README.md  aw-notify.spec  pyproject.toml
aw-notify/aw_notify/: __main__.py  main.py
aw-qt/: aw-qt.spec
aw-qt/aw_qt/: config.py
aw-server/aw_server/: api.py  custom_static.py
jcp-plus-pulp-capture-afk/: Makefile  jcp-plus-pulp-capture-afk.spec  pyproject.toml
jcp-plus-pulp-capture-afk/jcp_plus_pulp_capture_afk/: __main__.py  afk.py  config.py
jcp-plus-pulp-capture-afk/misc/: jcp-plus-pulp-capture-afk.service
jcp-plus-pulp-capture-afk/tests/: test_continuous_events.py
jcp-plus-pulp-capture-away/: Makefile  jcp-plus-pulp-capture-away.spec  pyproject.toml
jcp-plus-pulp-capture-away/jcp_plus_pulp_capture_away/: config.py  listeners.py
jcp-plus-pulp-capture-away/misc/: jcp-plus-pulp-capture-away.service
jcp-plus-pulp-capture-away/tests/: test_continuous_events.py
jcp-plus-pulp-capture-input/: Makefile  jcp-plus-pulp-capture-input.spec  pyproject.toml
jcp-plus-pulp-capture-input/src/jcp_plus_pulp_capture_input/: __main__.py  main.py
jcp-plus-pulp-capture-input/visualization/: package-lock.json  package.json
jcp-plus-pulp-capture-input/visualization/src/: index.js  index.pug
jcp-plus-pulp-capture-window/: Makefile  jcp-plus-pulp-capture-window.spec  pyproject.toml
jcp-plus-pulp-capture-window/jcp_plus_pulp_capture_window/: __main__.py  config.py  macos.swift  macos_applescript.py  main.py
jcp-plus-pulp-capture-window/misc/: jcp-plus-pulp-capture-x11.service
jcp-plus-pulp-client/: Makefile  pyproject.toml
jcp-plus-pulp-client/examples/: email_report.py  load_dataframe.py  merge_buckets.py  redact_sensitive.py  suggest_categories.py  suggest_categories_gpt.py  time_spent_today.py  working_hours.py
jcp-plus-pulp-client/jcp_plus_pulp_client/: __init__.py  __main__.py  classes.py  cli.py  client.py  config.py  queries.py  singleinstance.py
jcp-plus-pulp-client/tests/: test_client.py  test_failqueue.py  test_requestqueue.py
jcp-plus-pulp-core/: .coveragerc  Makefile  pyproject.toml
jcp-plus-pulp-core/jcp_plus_pulp_cli/: __main__.py
jcp-plus-pulp-core/jcp_plus_pulp_core/: __about__.py  config.py  dirs.py  log.py  schema.py
jcp-plus-pulp-core/jcp_plus_pulp_core/schemas/: bucket.json  export.json
jcp-plus-pulp-core/jcp_plus_pulp_datastore/: benchmark.py  datastore.py  migration.py
jcp-plus-pulp-core/jcp_plus_pulp_datastore/storages/: abstract.py  memory.py  peewee.py  sqlite.py
jcp-plus-pulp-core/jcp_plus_pulp_query/: functions.py  query2.py
jcp-plus-pulp-core/jcp_plus_pulp_transform/: chunk_events_by_key.py  classify.py  filter_keyvals.py  filter_period_intersect.py  flood.py  heartbeats.py  merge_events_by_keys.py  simplify.py  sort_by.py  split_url_events.py  union_no_overlap.py
jcp-plus-pulp-core/tests/: test_config.py  test_datastore.py  test_event.py  test_flood.py  test_heartbeat.py  test_query2.py  test_schemas.py  test_transforms.py  utils.py
jcp-plus-pulp-monitor-away/: Makefile  jcp-plus-pulp-monitor-away.spec  pyproject.toml
jcp-plus-pulp-monitor-away/jcp_plus_pulp_monitor_away/: __main__.py
jcp-plus-pulp-monitor-away/misc/: jcp-plus-pulp-monitor-away.service
jcp-plus-pulp-monitor-away/tests/: test_continuous_events.py
jcp-plus-pulp-monitor-input/: Makefile  jcp-plus-pulp-monitor-input.spec  pyproject.toml
jcp-plus-pulp-monitor-input/misc/: jcp-plus-pulp-monitor-input.service
jcp-plus-pulp-monitor-input/src/jcp_plus_pulp_monitor_input/: __main__.py  main.py
jcp-plus-pulp-monitor-window/: Makefile  jcp-plus-pulp-monitor-window.spec  pyproject.toml
jcp-plus-pulp-monitor-window/jcp_plus_pulp_monitor_window/: __main__.py  config.py  macos.swift  macos_applescript.py  macos_permissions.py  main.py
jcp-plus-pulp-monitor-window/misc/: jcp-plus-pulp-monitor-window-x11.service
jcp-plus-pulp-notify/: Makefile
jcp-plus-pulp-notify/jcp_plus_pulp_notify/: main.py
jcp-plus-pulp-qt/: Makefile  jcp-plus-pulp-qt.spec  pyproject.toml
jcp-plus-pulp-qt/jcp_plus_pulp_qt/: __main__.py  config.py  main.py  manager.py  trayicon.py
jcp-plus-pulp-qt/scripts/: config-autostart.sh
jcp-plus-pulp-qt/tests/: integration_tests.py
jcp-plus-pulp-server/: Makefile  jcp-plus-pulp-server.spec  pyproject.toml
jcp-plus-pulp-server/jcp_plus_pulp_server/: __about__.py  __main__.py  api.py  config.py  custom_static.py  main.py  rest.py  server.py  settings.py
jcp-plus-pulp-server/misc/: jcp-plus-pulp-server.service  process_logs.py
jcp-plus-pulp-server/scripts/: benchmark-api-heartbeat.py  profile-werkzeug.py
jcp-plus-pulp-server/tests/: conftest.py  test_client.py
jcp-plus-pulp-sync/: Makefile  jcp-plus-pulp-sync.spec  pyproject.toml
jcp-plus-pulp-sync/jcp_plus_pulp_sync/: __main__.py  main.py
jcp-plus-pulp-sync/misc/: jcp-plus-pulp-sync.service
jcp-plus-pulp-web/Chrome + Edge Extension/: manifest.json  pulp.js
scripts/: build_changelog.py  logcrawler.py  notarize.sh  symlink-systemd.sh  uninstall.sh  update-deps.sh
scripts/ci/: install_pyhook.ps1
scripts/package/: dmgbuild-settings.py  jcp-plus-pulp-setup.iss  package-all.sh  package-appimage.sh  package-deb.sh
scripts/package/deb/: control
scripts/tests/: integration_tests.py
