[tool.poetry]
name = "JCP+ PULP"
version = "0.12.0"
description = "The free and open-source automated time tracker. Cross-platform, extensible, privacy-focused."
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
# Installing them from here won't work
#jcp-plus-pulp-core = {path = "jcp-plus-pulp-core"}
#jcp-plus-pulp-client = {path = "jcp-plus-pulp-client"}
#jcp-plus-pulp-monitor-away = {path = "jcp-plus-pulp-monitor-away"}
#jcp-plus-pulp-monitor-window = {path = "jcp-plus-pulp-monitor-window"}
#jcp-plus-pulp-server = {path = "jcp-plus-pulp-server"}
#jcp-plus-pulp-qt = {path = "jcp-plus-pulp-qt"}

# https://github.com/ionrock/cachecontrol/issues/292
urllib3 = "<2"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^7"
pytest-cov = "*"
pytest-benchmark = "*"
psutil = "*"
pywin32-ctypes = {version = "*", platform = "win32"}
pefile = {version = "*", platform = "win32"}

pyinstaller = "*"
# releases are very infrequent, so good idea to use the master branch
# we need this unreleased commit: https://github.com/pyinstaller/pyinstaller-hooks-contrib/commit/0f40dc6e74086e5472aee75070b9077b4c17ab18
pyinstaller-hooks-contrib = {git = "https://github.com/pyinstaller/pyinstaller-hooks-contrib.git", branch="master"}

# Won't be respected due to https://github.com/python-poetry/poetry/issues/1584
#setuptools = ">49.1.1"  # needed due to https://github.com/pypa/setuptools/issues/1963

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
