[tool.poetry]
name = "jcp-plus-pulp-notify"
version = "0.1.0"
description = "Screentime notifications using ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://activitywatch.net/"
repository = "https://github.com/ActivityWatch/jcp-plus-pulp-notify/"
packages = [{include = "jcp_plus_pulp_notify"}]

[tool.poetry.scripts]
jcp-plus-pulp-notify = "jcp_plus_pulp_notify.main:main"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
aw-client = "^0.5.13"
desktop-notifier = "^3.4.2"
rubicon-objc = { version = "^0.4.0", platform = "darwin" }

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pyinstaller = "^5.7"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
