[tool.poetry]
name = "jcp-plus-pulp-capture-input"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "jcp_plus_pulp_capture_input", from = "src" }
]

[tool.poetry.scripts]
jcp-plus-pulp-capture-input = "jcp_plus_pulp_capture_input.main:main"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
aw-client = "^0.5.13"
jcp-plus-pulp-capture-away = {git = "https://github.com/jcp-blr/jcp-plus-pulp-capture-away.git"}

[tool.poetry.dev-dependencies]
pyinstaller = "^5.7"
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
