[tool.poetry]
name = "jcp-plus-pulp-client"
version = "0.5.13"
description = "Client library for JCP+ PULP"
authors = ["Maruthi Gowda <ygowda@jcp.com>"]
license = "MPL-2.0"
packages = [
    { include = "jcp_plus_pulp_client" },
]

[tool.poetry.scripts]
jcp-plus-pulp-client = "jcp_plus_pulp_client.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
jcp-plus-pulp-core = { path = "../jcp-plus-pulp-core/", develop = false }
requests = "*"
persist-queue = "*"
click = "^8.0"
tabulate = "*"
typing-extensions = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "*"
mypy = "*"
pylint = "*"
types-requests = "*"
types-tabulate = "*"
pyupgrade = "*"
black = "*"

[tool.mypy]
files = ["jcp_plus_pulp_client", "tests", "examples"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
