[tool.poetry]
name = "jcp-plus-pulp-core"
version = "0.5.16"
description = "Core library for JCP+ PULP"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "jcp_plus_pulp_core" },
    { include = "jcp_plus_pulp_datastore" },
    { include = "jcp_plus_pulp_transform" },
    { include = "jcp_plus_pulp_query" },
]

[tool.poetry.scripts]
jcp-plus-pulp-cli = "jcp_plus_pulp_cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.3"
peewee = "3.*"
platformdirs = "3.10"  # pinned due to sometimes breaking changes in minor versions: https://github.com/jcp-blr/jcp-plus-pulp-core/pull/122#issuecomment-1768020335
iso8601 = "^1.0.2"
rfc3339-validator = "^0.1.4"  # needed for the date-type format in jsonschema
strict-rfc3339 = "^0.7"
tomlkit = "*"
deprecation = "*"
timeslot = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "*"
mypy = "*"
pylint = "*"
black = "*"
ruff = "*"
pyupgrade = "*"
TakeTheTime = "^0.3.1"

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
