[tool.poetry]
name = "jcp-plus-pulp-monitor-away"
version = "1.0.0"
description = "Monitor Away Status for JCP+ PULP"
authors = ["Maruthi Gowda <ygowda@jcp.com>"]
license = "JCP+"

[tool.poetry.scripts]
jcp-plus-pulp-monitor-away = "jcp_plus_pulp_monitor_away:main"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
jcp-plus-pulp-client = { path = "../jcp-plus-pulp-client/", develop = false }
pyobjc-framework-Quartz = { version = "*", platform = "darwin" }
pynput = "*"

# locked due to https://github.com/python-xlib/python-xlib/pull/242 leading to 100% CPU stalls
# see: jcp-plus-pulp-monitor issue #89
python-xlib = { version = "0.31", platform = "linux" }

[tool.poetry.dev-dependencies]
mypy = "*"
macholib = {version = "*", platform = "darwin"}
pyinstaller = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
