[tool.poetry]
name = "jcp-plus-pulp-monitor-window"
version = "0.2.0"
description = "Window watcher for JCP+ PULP"
authors = ["Maruthi Gowda <ygowda@jcp.com>"]
license = "JCP+"

[tool.poetry.scripts]
jcp-plus-pulp-monitor-window = "jcp_plus_pulp_monitor_window:main"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
jcp-plus-pulp-client = { path = "../jcp-plus-pulp-client/", develop = false }
pywin32 = {version = "306", platform = "win32"}
wmi = {version = "*", platform = "win32"}
pyobjc-framework-ApplicationServices = { version = "*", platform="darwin"}
pyobjc-framework-CoreText = {version = "*", platform="darwin"}
pyobjc-framework-OSAKit = {version = "*", platform="darwin"}

# locked due to https://github.com/python-xlib/python-xlib/pull/242 leading to 100% CPU stalls
# see: https://github.com/jcp-blr/jcp-plus-pulp-monitor-window/issues/89
# also locked in jcp-plus-pulp-monitor-away
python-xlib = {version = "0.31", platform = "linux"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "*"
macholib = {version = "*", platform = "darwin"}  # Needed for pyinstaller
pyinstaller = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
