[tool.poetry]
name = "jcp-plus-pulp-server"
version = "1.0.0"
description = "Server for JCP+ PULP"
authors = ["Maruthi Gowda <ygowda@jcp.com>"]
license = "JCP+"
include = []

[tool.poetry.scripts]
jcp-plus-pulp-server = "jcp_plus_pulp_server:main"

[tool.poetry.dependencies]
python = "^3.8"
jcp-plus-pulp-core = { path = "../jcp-plus-pulp-core/", develop = false }
jcp-plus-pulp-client = { path = "../jcp-plus-pulp-client/", develop = false }
flask = "^2.2"
flask-restx = "^1.0.3"
flask-cors = "*"
importlib-metadata = {version = "*", python = "<3.10"}
werkzeug = "^2.3.3"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^7.3"
pytest-flask = "*"
pytest-benchmark = "*"
pytest-cov = "*"
types-Werkzeug = "*"
types-pkg-resources = "*"
types-Flask = "*"
black = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=term --cov-report=xml --cov-report=html --cov=jcp_plus_pulp_server"
python_files = ["*.py",]

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
